Much simplified handling of jar-URLs; obsoletes special handling such as for '#' (#85137).